--- a/youtube2.html
+++ b/youtube2.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="styles/video.css">
 <link rel="stylesheet" href="styles/header.css">
 <link rel="stylesheet" href="styles/general.css">
+<link rel="stylesheet" href="styles/sidebar.css">
 </head>
 
 <body>
@@ -37,6 +38,9 @@
         </div>
     </div>
 
+    <div class="sidebar">
+        sidebar
+    </div>
 
 <div class="grid">
     <div  class="video-preview">
