--- a/youtube2.html
+++ b/youtube2.html
@@ -33,7 +33,10 @@
         <div class="right-side">
             <img class="upload-icon" src="icons/upload.svg" >
             <img class="apps-icon" src="icons/youtube-apps.svg" >
-            <img  class="notification-icon" src="icons/notifications.svg" >
+            <div class="noti-container">
+                <img  class="notification-icon" src="icons/notifications.svg" >
+                <div class="noti-numb">3</div>
+            </div>
             <img class="current-user-icon" src="channel-dp\my-channel.jpeg" >
         </div>
     </div>
